fixed jumbotron image being too big

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,20 +26,25 @@ h1 {
     color: var(--green) !important;
 }
 
-/*Hero Section*/
+/*Jumbotron Section*/
 
 #jumbotron {
     background-image: url(../images/green\ background.jpg);
     background-size: cover;
 }
+.display-4 {
+    margin-left: ;
+}
 .jumboimg {
     border-radius: 50%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    max-height: 300px;
+    max-width: 300px;
+    margin: auto;
 }
 .jumbotron{
     display: flex !important;
-    align-items: center !important;
+    align-items: flex-end !important;
+    max-height: 200px;
 }
 .display-4 {
     color: var(--jasmine) !important;
@@ -99,6 +104,8 @@ h1 {
 }
 
 /*Contact Me Footer*/
+
+
 
 /* Media Queries */
 
